--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>My Website</title>
     <h1>My Website </h1>
-</head>My name is Qeys Elias. I am a Grade 8 student at Makini School. I enjoy spending my free time reading books, playing video games, and participating in outdoor games. These hobbies help me learn new things, have fun, and stay active.I love playing video games with my two freinds Melvin and Jeremy!.
-Anyways, thats all. Bye! 👋
+<h1>My name is Qeys Elias. I am a Grade 8 student at Makini School. I enjoy spending my free time reading books, playing video games, and participating in outdoor games.
+ These hobbies help me learn new things, have fun, and stay active.I love playing video games with my two freinds Melvin and Jeremy!.
+Anyways, thats all. Bye! 👋</h1>
+
 <body>
-    <img src="fav.png"/>
+
+
+<img src="fav.png" alt="lol">
+
+<h1>What I Like</h1>
+
+
+<img src="code.png" alt="lol"> <h2> Coding </h2>
+<img src="playingXD.jpg" alt="lol">
+
+
+
+
 </body>
+
 </html>
