--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="myDiv">
   <h2>Welcome to my Webpage</h2>
-  <p>Below are some facts about me 👇 </p>
+  <p>Below are some facts about me 👇:) </p>
 </div>
 
 
@@ -48,3 +48,4 @@ Anyways, thats all. Bye! 👋</h1>
 
 
 </html>
+
